added new part 2 of life blog series

--- a/content/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-০.md
+++ b/content/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-০.md
@@ -43,6 +43,9 @@ ShowPostNavLinks: true
 ## শেষ কথা
 আপনার জীবনের "core values" কি কি সেটা ভালভাবে বসে একবার চিন্তা করুন। তারপর সম মিলিয়ে একটু ঘাটাঘাটি করুন আপনার জন্য বাংলাদেশের বাহিরে পৃথিবীর কোন এলাকাটা সবচেয়ে উপযোগী? কারণ আপনি যখন কাজের মধ্যে থাকবেন তখন হয়ত সব ব্যাপারগুলো অনুধাবন করবেন না। কিন্তু কাজের বাহিরেও যে আলাদা একটা ব্যক্তিগত জীবন আছে সেইটা আমরা প্রায়ই ভুলে যাই মাঝে মাঝে। সেই জীবনটাও আসলে উপভোগ করা দরকার। সেই চিন্তাটাই সবার আগে করা উচিত বলে আমি মনে করি। 🙂
 
+পরের পর্বের লিঙ্কঃ [aniskhan001.me/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-১](/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-১)
+
 ---
 
-ব্লগটা ভিডিও আকারে দেখতে চাইলেঃ https://youtu.be/m5teFFW2cbI
+ব্লগটা ভিডিও আকারে দেখতে চাইলেঃ
+{{< youtube m5teFFW2cbI >}}
