added final part of getting job in abroad

--- a/content/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-১.md
+++ b/content/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-১.md
@@ -88,6 +88,9 @@ ShowPostNavLinks: true
 ## শেষ কথা
 রিসার্চ করতে থাকুন। অনেক বেশী ঘাটাঘাটি করুন। তাহলে অজানা অনেক কিছু জানা যাবে। আশা করি এই পর্বে শেয়ার করা টিপসগুলো কাজে লাগিয়ে আপনি আপনার নিজের স্টাইলটা খুঁজে পাবেন এবং খুব ভালভাবে প্রস্তুতি নিতে পারবেন। যারা জব নিয়ে দেশের বাহিরে যাওয়ার চেষ্টা করছেন তাদের সবাইকে প্রথম ইন্টারভিউ পাওয়ার জন্য শুভকামনা। প্রথম ইন্টারভিউ পাওয়ার পরে কমন সফট স্কিল প্রশ্ন কি কি থাকে এবং উত্তরগুলো কেমন হওয়া উচিৎ সেটা নিয়ে পরের পর্বে আলাপ করব।
 
+পরের পর্বের লিঙ্কঃ [aniskhan001.me/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-২](/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-২) \
+আগের পর্বঃ [aniskhan001.me/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-০](/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-০)
+
 ---
 
 ব্লগটা ভিডিও আকারে দেখতে চাইলেঃ
