--- a/content/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-২.md
+++ b/content/life/জব-নিয়ে-কিভাবে-বিদেশে-যাওয়া-যায়-পর্ব-২.md
@@ -102,7 +102,7 @@ trivago তে যখন ইন্টারভিউ দিয়েছিলাম
 
 আমার অর্থনৈতিক অবস্থা ও লাইফ গোলস গুলো শেয়ার কারণে তাদের মধ্যে কোন সহানুভূতি তৈরি হবে না। কারণ দিন শেষে আপনার দক্ষতাটাকেই তারা আগে দেখবে। তবে আপনার ভিশন কি, মিশন কি, এবং ভবিষ্যতে যা যা চাচ্ছেন সেই ব্যাপারে আপনি নিজে পরিষ্কার কিনা সেটা জানানোও অনেকটা জরুরী। কারণ আপনি আপনার লক্ষ্যে পরিষ্কার থাকলেই কর্মক্ষেত্রে আপনার সেরাটা দিতে পারবেন।
 
-## Do you have any questions for us? আপনার কি কোনও প্রশ্ন আছে?
+## Do you have any questions for us? আপনার কি কোন প্রশ্ন আছে?
 
 প্রায় মোটামুটি প্রত্যেক ইন্টারভিউ শেষেই এই প্রশ্নটা করা হয়। এবং এটা খুবই গুরুত্বপূর্ণ একটা প্রশ্ন। আপনার যদি ভাল কোন প্রশ্ন থাকে তাহলে এই পজিশনে জয়েন করার জন্য আপনার যে প্রবল ইচ্ছা আছে সেটা প্রকাশ পায়। ইদানীং অনেক ইন্টারভিউ বোর্ডে থাকি। যখন ইন্টারভিউ শেষে এই প্রশ্নটা করা হয় বেশীরভাগ সময়েই তাদের হয় কোন প্রশ্ন থাকে না, অথবা এমন সব প্রশ্ন করে যার উত্তর জব পোস্টেই মেনশন করা আছে। এই যেমন, আপনাদের টিমের প্রোগ্রামিং ল্যাঙ্গুয়েজ কি, আপনারা কোন ফ্রেমওয়ার্ক দিয়ে কাজ করেন, কি কি টেক ইউজ করেন ইত্যাদি। এই রকম প্রশ্নের মাধ্যমে প্রকাশ পেতে পারে আপনি হয়তবা জব পোস্টটা ভাল করে পড়েননি অথবা পর্যাপ্ত মনোযোগ দেননি।
 
