--- a/content/life/প্রোগ্রামিং-কন্টেস্ট-বাচ্চারা-করে.md
+++ b/content/life/প্রোগ্রামিং-কন্টেস্ট-বাচ্চারা-করে.md
@@ -1,6 +1,6 @@
 ---
 title: "প্রোগ্রামিং কন্টেস্ট কি বাচ্চারাই করে?"
-darfte: 2016-11-19
+date: 2016-11-19
 tags: ["sportprogramming", "programmingcontest"]
 # showToc: true
 TocOpen: false
@@ -39,4 +39,6 @@ ShowPostNavLinks: true
 
 সম্মানিত কায়কোবাদ স্যার কিছুদিন আগে IUT তে বলেছিলেন, “ক্রিকেট খেলায় আন্দাজে ব্যাট চালালে ছক্কা হতে পারে, আন্দাজে বল মারলে আউট ও হতে পারে। কিন্তু কন্টেস্ট প্রোগ্রামিং এ ১০০ তে ১০০ ভাগ কোড হলেই কেবল সেইটা ACCEPTED হতে পারে। কাজেই এইটা দক্ষতার সাথেও ভাগ্যের খেলা না, এইটা শুধুমাত্রই দক্ষতার খেলা!”
 
-_stolen from my [old Facebook post](https://www.facebook.com/aniskhan001/posts/pfbid02JC75vy541q1wS6MmTBb1jaSrFbMYkKpCk7WojZ3ABe6sMeRs3b58kQv8ZHQvESKxl)_
+---
+
+_imported from my [old Facebook post](https://www.facebook.com/aniskhan001/posts/pfbid02JC75vy541q1wS6MmTBb1jaSrFbMYkKpCk7WojZ3ABe6sMeRs3b58kQv8ZHQvESKxl)_
